grid responsive for mobile

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,13 @@ body{
     margin-right: auto;
 }
 
+@media screen and (max-width: 420px) {
+    .container {
+        height:300px;
+        width:300px;
+    }
+  }
+
 
 .grid
 {
