--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,8 @@ body{
     grid-template-rows: repeat(var(--gridSize), 1fr);
     height:380px;
     width:490px;
-
     box-sizing: content-box;
     justify-content: center;
-    /*background-image: url('images/etch-a-sketch.jpeg');
-    background-repeat: no-repeat;
-    background-size: cover;*/
-    /*margin-left: auto;
-    margin-right: auto;*/
 }
 
 .image
@@ -54,6 +48,26 @@ body{
     width: 640px;
     text-align: center;
 }
+
+
+.image-shake
+{
+    animation: shake 0.5s;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
 
 @media screen and (max-width: 420px) {
     .container {
@@ -101,4 +115,5 @@ body{
 .button-item
 {
     margin: 25px 0;
+    border-radius: 50%;
 }
